--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "easily",
   "version": "1.0.0",
   "description": "a job explorer app",
-  "main": "src/server.js",
+  "main": "src/index.js",
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon  src/server.js",
-    "start": "node src/server.js"
+    "dev": "nodemon  src/index.js",
+    "start": "node src/index.js"
   },
   "repository": {
     "type": "git",
